RESOLVED FIXED113727
Scrollbar does not pick up changed styles until hovered
https://bugs.webkit.org/show_bug.cgi?id=113727
Summary Scrollbar does not pick up changed styles until hovered
Jon Rimmer
Reported 2013-04-01 15:56:31 PDT
If the scrollbar pseudo-elements are used to change the appearance of the scrollbar, live changes to the applicable styles are not applied immediately. Instead, the parts of the scrollbar must be hovered, at which point they will change their appearance. See the attached testcase for an example. A button is used to toggle a 'dark' class on the document element. Different styles apply to the body and the scrollbar when this class is present, but the new scrollbar styles are not picked up immediately, instead it retains the old appearance until it is hovered. Browser: Google Chrome 27.0.1453.9 (Official Build 191205) dev-m OS: Windows 7 WebKit: 537.36 (@146919)
Attachments
Simple testcase (804 bytes, text/html)
2013-04-01 15:57 PDT, Jon Rimmer
no flags
Jon Rimmer
Comment 1 2013-04-01 15:57:10 PDT
Created attachment 196031 [details] Simple testcase
Brent Fulgham
Comment 2 2022-07-13 14:32:44 PDT
Safari and Chrome both handle this test case properly.
Ahmad Saleem
Comment 3 2023-05-22 08:41:02 PDT
EWS
Comment 4 2023-05-22 13:12:03 PDT
Committed 264356@main (dfd97e668d4a): <https://commits.webkit.org/264356@main> Reviewed commits have been landed. Closing PR #12312 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2023-05-22 13:13:18 PDT
Note You need to log in before you can comment on or make changes to this bug.