Scrollbar does not pick up changed styles until hovered https://bugs.webkit.org/show_bug.cgi?id=113727

Reviewed by Simon Fraser.

Resolve the pseudo-element `::-webkit-scrollbar` in the same way as it
is done with other pseudo-elements that can be applied to any element.

* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolveElement):
(WebCore::Style::TreeResolver::resolvePseudoElement):
* LayoutTests/fast/css/scrollbar-dynamic-style-change-expected.html: Rebaselined
* LayoutTests/fast/css/scrollbar-dynamic-style-change.html: Ditto

Canonical link: https://commits.webkit.org/264356@main